# bsr-hub

./: .dockerignore  .env.example  .env.local.example  .env.mongodb.example  .gitignore  BSR-Hub-2-Minute-Pitch.md  Cargo.toml  README.md  compose.mongodb.yml  package-lock.json  package.json  render.yaml
docs/: BSR-Hub-Team-Tasks.md  PHOTO-SOURCES.md
infra/: mongo-keyfile
scripts/: build-pages.sh  check-brand-assets.mjs  check-mongodb.sh  check-performance-links.mjs  check-production-deploy.mjs  demo.sh  (+4 more)
services/core-api/: Cargo.toml  Dockerfile
services/core-api/src/: auth.rs  config.rs  demo.rs  error.rs  lib.rs  main.rs  runner_demo.rs
services/core-api/src/adapters/: mod.rs  postgres_orders.rs  stripe.rs
services/core-api/src/adapters/mongo/: bootstrap.rs  mod.rs  models.rs  profiles.rs  seed.rs  slots.rs
services/core-api/src/domain/: billing.rs  mod.rs  order_state.rs  pricing.rs  quote.rs  runner.rs
services/core-api/src/http/: auth_extract.rs  health.rs  mod.rs  orders.rs  pricing.rs  profile.rs  quotes.rs  stripe_webhook.rs
services/core-api/src/ports/: mod.rs  order_repository.rs  payment_gateway.rs  profile_repository.rs
services/core-api/tests/: billing_domain.rs  config_rules.rs  cors_policy.rs  demo_api.rs  demo_listing_contract.rs  domain_rules.rs  health_api.rs  mongo_order_lifecycle_integration.rs  mongo_pricing_integration.rs  mongo_reservation_integration.rs  mongo_slots.rs  payment_verification.rs  pricing_api.rs  pricing_domain.rs  profile_api.rs  ps5_api_flow.rs  runner_demo_api.rs  runner_domain.rs  stripe_webhook.rs
(+142 files in other folders)
